--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,30 @@
     android:background="@drawable/home_page_img"
     >
 
+    <TextView
+        android:id="@+id/text_tasks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="Tasks"
+        android:textSize="32sp"
+        android:textColor="@color/black"
+        android:layout_marginStart="31dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="15dp"
+        >
+    </TextView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/activity_main_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/text_tasks"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:nestedScrollingEnabled="true"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
+
     <RelativeLayout
         android:id="@+id/linear_layout1"
         android:layout_width="match_parent"
@@ -49,13 +73,11 @@
         android:id="@+id/button_add_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="31dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="31dp"
         android:text="add_task"
         android:layout_above="@+id/linear_layout1"
-        android:layout_marginBottom="28dp">
+        android:layout_marginBottom="28dp"
+        >
     </Button>
-
-
-
 </RelativeLayout>
