--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
     <color name="purple">#C700FF</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#6200EE</color>
 </resources>
